# local-whisper-win

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/plans/: 2026-03-09-whisper-windows-design.md  2026-03-09-whisper-windows-implementation.md
docs/research/: 2026-03-09-typeless-analysis.md
scripts/: prepare-sidecar-runtime.js  prepare-sidecar-runtime.ps1
sidecar/: README.md  pyproject.toml
sidecar/src/whisper_sidecar/: __init__.py  __main__.py  bootstrap.py  ipc.py  recorder.py  transcriber.py
sidecar/tests/: test_bootstrap.py  test_ipc.py  test_main.py  test_recorder.py  test_transcriber.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  clipboard_linux.rs  debug_log.rs  main.rs  settings.rs  sidecar.rs  state.rs  tray.rs
src-tauri/windows/: cleanup.wxs  installer-hooks.nsh
src/components/: StatusOverlay.tsx
src/lib/: app-state.ts
