[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "whisper-windows-sidecar"
version = "0.1.0"
description = "Python sidecar for local WhisperWindows dictation"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "faster-whisper==1.2.1",
    "numpy==2.4.3",
    "qwen-asr==0.0.6",
    "sounddevice==0.5.5",
    "torch>=2.7,<2.9",
]

[project.scripts]
whisper-sidecar = "whisper_sidecar.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_sidecar"]
