[package]
name = "whisper-windows"
version = "0.1.0"
description = "Local Windows dictation shell scaffold"
edition = "2021"
rust-version = "1.81"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
